2007-06-17  George Giolfan  <georgegiolfan@yahoo.com>

	* TabControlTest.cs: Added TabStripPlacementPropertyChangedCallback test.
	* TabItemTest.cs: Added IsSelectedSimplified, TabStripPlacementBinding tests.

2007-06-15  George Giolfan  <georgegiolfan@yahoo.com>

	* TabItemTest.cs: Added IsSelected and following tests.

2007-06-14  George Giolfan  <georgegiolfan@yahoo.com>

	* TabControlTest.cs: Added OnApplyTemplateAddsItemsToTabPanel test.

2007-06-14  George Giolfan  <georgegiolfan@yahoo.com>

	* PanelTest.cs: Added IsItemsHost-related tests.

2007-06-13  George Giolfan  <georgegiolfan@yahoo.com>

	* TabControlTest.cs: Added Style test.

2007-06-12  George Giolfan  <georgegiolfan@yahoo.com>

	* TabControlTest.cs: Added Item and following tests.

2007-06-11  George Giolfan  <georgegiolfan@yahoo.com>

	* TabControlTest.cs: Added TabStripPlacementBinding test.

2007-06-11  George Giolfan  <georgegiolfan@yahoo.com>

	* TabItemTest.cs: Added.

2007-06-11  George Giolfan  <georgegiolfan@yahoo.com>

	* WrapPanelTest.cs: Added.

2007-06-10  George Giolfan  <georgegiolfan@yahoo.com>

	* DockPanelTest.cs: Added DockProperty test.

2007-06-09  George Giolfan  <georgegiolfan@yahoo.com>

	* StackPanelTest.cs: Added Stretch, Stretch2, MakeVisible tests.

2007-06-09  George Giolfan  <georgegiolfan@yahoo.com>

	* ButtonTest.cs: Added Panel, ToolBar tests.

2007-06-08  George Giolfan  <georgegiolfan@yahoo.com>

	* StackPanelTest.cs: Added some ScrollViewer-related tests.

2007-06-08  George Giolfan  <georgegiolfan@yahoo.com>

	* StackPanelTest.cs: Added tests for IScrollInfo.

2007-06-07  George Giolfan  <georgegiolfan@yahoo.com>

	* ScrollViewerTest.cs: Added.

2007-06-06  George Giolfan  <georgegiolfan@yahoo.com>

	* StackPanelTest.cs, PanelTest.cs: Added AlignmentMetadata test.

2007-06-06  George Giolfan  <georgegiolfan@yahoo.com>

	* StackPanelTest.cs: Added Alignment test.

2007-06-05  George Giolfan  <georgegiolfan@yahoo.com>

	* StackPanelTest.cs: Added Measure test.
